--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     
     // ix
     compile files('libs/EloixClient-11.02.000.jar')
-    compile "commons-codec.commons-codec:1.11"
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
     
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
