--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,12 @@ dependencies {
     compile "io.elastic:sailor-jvm:2.1.0"
     
     // ix
-    compile files('libs/EloixClient-11.02.000.jar')
+    compile files('libs/EloixClient-12.01.001.jar')
+    compile files('libs/Ix4dummies-12.01.000.jar')
     compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
     
-    // https://mvnrepository.com/artifact/com.google.code.gson/gson
-	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    
+    // json converter
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.0'
 }
 
 uploadArchives {
@@ -37,3 +37,7 @@ uploadArchives {
 task wrapper(type: Wrapper) {
     gradleVersion = '2.0'
 }
+
+
+// https://github.com/joelittlejohn/jsonschema2pojo/tree/master/jsonschema2pojo-gradle-plugin
+
